--- a/loop_web/Loop/src/pages/Components/FriendNotificationComponent/index.scss
+++ b/loop_web/Loop/src/pages/Components/FriendNotificationComponent/index.scss
@@ -52,11 +52,82 @@
     }
 
     .addlist {
-      width: 90%;
-      height: 10%;
+      width: 94%;
+      height: 12%;
       margin-top: 20px;
       border-radius: 10px;
-      box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+      border: #dfdddd solid 1px;
+      transition: box-shadow 0.3s ease;
+      display: flex;
+      flex-direction: column;
+      padding: 10px;
+
+      &:hover {
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      }
+
+      .mess {
+        width: 100%;
+        height: 70%;
+        display: flex;
+
+        .avatar {
+          width: 20%;
+          height: 100%;
+          background-color: aqua;
+          border-radius: 50%;
+          overflow: hidden;
+
+          img {
+            width: 100%;
+            height: 100%;
+            border-radius: 50%;
+            object-fit: cover;
+          }
+        }
+
+        .zhuti {
+          flex: 1;
+          padding-left: 20px;
+          height: 100%;
+
+          .name {
+            font-size: 18px;
+            font-weight: 550;
+
+          }
+
+          .nature {
+            font-size: 14px;
+            color: #dfdddd;
+            font-weight: 550;
+            margin-top: 10px;
+          }
+        }
+
+
+
+      }
+
+      .addbutt {
+        flex: 1;
+        width: 100%;
+        height: auto;
+        display: flex;
+        justify-content: space-between;
+        padding-top: 2px;
+
+        .add {
+          width: 46%;
+          height: 100%;
+        }
+
+        .send {
+          width: 46%;
+          height: 100%;
+        }
+      }
+
     }
   }
 }
