--- a/loop_web/Loop/src/pages/Components/MessageComponent/index.scss
+++ b/loop_web/Loop/src/pages/Components/MessageComponent/index.scss
@@ -5,7 +5,6 @@
   .header {
     width: 100%;
     height: 8.5%;
-
     display: flex;
     align-items: center;
 
@@ -15,6 +14,9 @@
     }
 
     .add {
+      width: 14%;
+      padding-right: 5px;
+
       .add-button {
         font-size: 16px;
         font-weight: 600;
