--- a/loop_web/Loop/src/pages/Home/index.scss
+++ b/loop_web/Loop/src/pages/Home/index.scss
@@ -7,7 +7,7 @@
   .main-left {
     height: 100vh;
     width: 6%;
-    background-color: #f9bc2f;
+    background-color: #fedc18;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -35,12 +35,37 @@
       border-radius: 50%;
       background-color: black;
       overflow: hidden; // 隐藏超出圆形部分的图片
+      position: relative;
+      display: inline-block;
+      cursor: pointer;
 
       img {
         width: 100%;
         height: 100%;
         // 使用 cover 让图片覆盖整个容器，可能会裁剪部分图片以适应圆形
+        border-radius: 50%;
         object-fit: cover;
+      }
+
+      .overlay {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.5); // 半透明黑色
+        border-radius: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        color: white;
+        font-size: 16px;
+        opacity: 0;
+        transition: opacity 0.3s ease;
+      }
+
+      &:hover .overlay {
+        opacity: 1;
       }
     }
 
@@ -93,5 +118,12 @@
     width: 23%;
     height: 100vh;
     background-color: #FFFFFF;
+  }
+
+  .main-right {
+    width: 71%;
+    height: 100vh;
+    background-color: #FFFFFF;
+    border-left: 1px solid #f4f4f4;
   }
 }
