--- a/loop_web/Loop/src/components/SideNavigation/index.scss
+++ b/loop_web/Loop/src/components/SideNavigation/index.scss
@@ -21,8 +21,8 @@
   }
 
   .avatar {
-    width: 70%;
-    height: 7.3%;
+    width: 70px;
+    height: 70px;
     margin-top: 20px;
     border-radius: 50%;
     background-color: black;
@@ -61,7 +61,7 @@
 
     .setting {
       font-size: 30px;
-      margin-top: 600%;
+      margin-top: 550%;
       display: flex;
       justify-content: center;
     }
