--- a/loop_web/Loop/src/components/SideNavigation/index.scss
+++ b/loop_web/Loop/src/components/SideNavigation/index.scss
@@ -33,7 +33,7 @@
       justify-content: center;
     }
 
-    .address {
+    .friend {
       font-size: 30px;
       margin-top: 40%;
       display: flex;
