--- a/loop_web/Loop/src/pages/Home/index.scss
+++ b/loop_web/Loop/src/pages/Home/index.scss
@@ -1,129 +1,18 @@
-.main {
+.main-layout {
   width: 100%;
   height: 100vh;
-  background-color: #f0efef;
+  background-color: #f6f6f6;
   display: flex;
-
-  .main-left {
-    height: 100vh;
-    width: 6%;
-    background-color: #fedc18;
+  overflow: hidden;
+  .main-layout-content {
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    flex: 1;
 
-    .icon {
-      width: 50%;
-      height: 6%;
-      margin-top: 20px;
-      overflow: hidden;
-
-      img {
-        width: 100%;
-        height: 100%;
-        object-fit: fill; // 按比例缩放图片，填满容器，可能会裁剪部分图片
-        // object-fit: contain; // 按比例缩放图片，使图片完整显示在容器内
-      }
-
+    .main-layout-content-left {
+      border-right: 1px solid #eee;
     }
-
-    .avatar {
-      // 确保宽度和高度相等，这里使用固定像素值，你也可以根据需要调整
-      width: 40%;
-      height: 5%;
-      margin-top: 20px;
-      border-radius: 50%;
-      background-color: black;
-      overflow: hidden; // 隐藏超出圆形部分的图片
-      position: relative;
-      display: inline-block;
-      cursor: pointer;
-
-      img {
-        width: 100%;
-        height: 100%;
-        // 使用 cover 让图片覆盖整个容器，可能会裁剪部分图片以适应圆形
-        border-radius: 50%;
-        object-fit: cover;
-      }
-
-      .overlay {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-color: rgba(0, 0, 0, 0.5); // 半透明黑色
-        border-radius: 50%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        color: white;
-        font-size: 16px;
-        opacity: 0;
-        transition: opacity 0.3s ease;
-      }
-
-      &:hover .overlay {
-        opacity: 1;
-      }
-    }
-
-    .choice-left {
-      width: 100%;
+    .main-layout-content-right {
       flex: 1;
-      margin-top: 100px;
-
-      .message {
-        width: 100%;
-        height: 10%;
-        font-size: 28px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-
-      }
-
-      .people {
-        width: 100%;
-        height: 10%;
-        font-size: 28px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-      }
-
-      .friendmessage {
-        width: 100%;
-        height: 10%;
-        font-size: 28px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-      }
-
-      .setting {
-        width: 100%;
-        height: 10%;
-        font-size: 28px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        margin-top: 300%;
-      }
     }
-  }
-
-  .main-auto {
-    width: 23%;
-    height: 100vh;
-    background-color: #FFFFFF;
-  }
-
-  .main-right {
-    width: 71%;
-    height: 100vh;
-    background-color: #FFFFFF;
-    border-left: 1px solid #f4f4f4;
   }
 }
