feat:判断是否是好友

--- a/loop_web/Loop/src/components/SideNavigation/index.scss
+++ b/loop_web/Loop/src/components/SideNavigation/index.scss
@@ -42,7 +42,7 @@
 
     .setting {
       font-size: 30px;
-      margin-top: 550%;
+      margin-top: 650px;
       display: flex;
       justify-content: center;
     }
