--- a/loop_web/Loop/src/components/Chat/index.scss
+++ b/loop_web/Loop/src/components/Chat/index.scss
@@ -1,7 +1,7 @@
 .chat-container {
   position: relative;
-  background-color: red;
   width: 100%;
+  height: 100%;
 
   .chat-header {
     position: absolute;
@@ -47,6 +47,67 @@
         align-items: center;
         margin-left: 10px;
         cursor: pointer;
+      }
+    }
+  }
+
+  .chat-input {
+    position: absolute;
+    width: 100%;
+    width: 100%;
+    height: 120px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    position: absolute;
+    bottom: 0px;
+    background-color: #fff;
+
+    .textarea {
+      width: 100%;
+      display: block;
+      margin: 0px;
+      box-sizing: border-box;
+      background-color: transparent;
+      font-family: inherit;
+      font-size: inherit;
+      letter-spacing: inherit;
+      height: 73px;
+      overflow: auto;
+      resize: none;
+      padding: 10px;
+      min-height: 63px;
+      outline: 0px;
+      border: 0px;
+
+      // 禁用聚焦动画
+      &:focus {
+        outline: none;
+        box-shadow: none;
+        animation: none;
+        transition: none;
+      }
+
+      // 隐藏滚动条按钮并禁用动画
+      &::-webkit-scrollbar-button {
+        display: none;
+        height: 0;
+        width: 0;
+      }
+
+      // 自定义滚动条样式
+      &::-webkit-scrollbar {
+        width: 6px;
+        height: 6px;
+      }
+
+      &::-webkit-scrollbar-thumb {
+        background-color: rgba(0, 0, 0, 0.2);
+        border-radius: 3px;
+      }
+
+      &::-webkit-scrollbar-track {
+        background-color: transparent;
       }
     }
   }
