--- a/loop_web/Loop/src/components/SideNavigation/index.scss
+++ b/loop_web/Loop/src/components/SideNavigation/index.scss
@@ -25,6 +25,10 @@
     width: 100%;
     flex: 1;
     margin-top: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
 
     .conversation {
       font-size: 30px;
@@ -42,10 +46,9 @@
 
     .setting {
       font-size: 30px;
-      margin-top: 650px;
       display: flex;
       justify-content: center;
+      margin-bottom: 40px;
     }
   }
 }
-
