--- a/loop_web/Loop/src/components/MessageItem/index.scss
+++ b/loop_web/Loop/src/components/MessageItem/index.scss
@@ -1,8 +1,11 @@
 .friend-item {
   display: flex;
   align-items: center;
-  padding: 10px;
+  // padding: 10px;
   cursor: pointer;
+  height: 70px;
+  padding: 0 20px;
+  width: 300px;
 
   .friend-avatar {
     width: 50px;
@@ -16,6 +19,7 @@
   .friend-info {
     margin-left: 10px;
     max-width: 240px;
+    flex: 1;
 
     .friend-name-time {
       width: 100%;
