--- a/loop_web/Loop/src/pages/Change/index.scss
+++ b/loop_web/Loop/src/pages/Change/index.scss
@@ -1,20 +1,20 @@
-.main{
-   width: 50%;
-   height: 70vh;
-   border-radius: 20px;
-   background-color:#FFFFFF;
-   margin:6% auto;
-   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* 添加阴影效果 */
-   border: 1px solid #f1f1f1; /* 添加边框 */;
-   padding-top: 10px;
-   display: flex;
-   flex-direction: column;
-   //管理内容
-   .account-manage {
+.main {
+  width: 50%;
+  height: 70vh;
+  border-radius: 20px;
+  background-color: #ffffff;
+  margin: 6% auto;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* 添加阴影效果 */
+  border: 1px solid #f1f1f1; /* 添加边框 */
+  padding-top: 10px;
+  display: flex;
+  flex-direction: column;
+  //管理内容
+  .account-manage {
     position: relative;
     padding: 20px;
     text-align: center;
-    
+
     .back-button {
       position: absolute;
       left: 20px;
@@ -60,57 +60,60 @@
     .profile-content {
       transform: translateY(0);
       opacity: 1;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
     }
   }
   //切换内容
-   .usermess{
+  .usermess {
     width: 50%;
     height: 250px;
-    margin: 100px auto;
     display: flex;
     flex-direction: column;
-   align-items: center;
-    .useravatar{
-        width: 100px;
-        height: 100px;
-        border-radius: 50%;
-        overflow: hidden;
-        img{
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-        }
-    }
-    .username{
+    align-items: center;
+    .useravatar {
+      width: 100px;
+      height: 100px;
+      border-radius: 50%;
+      overflow: hidden;
+      img {
         width: 100%;
-        height: 50px;
-        margin-top: 20px;
-        font-size: 30px;
-        font-weight: 600;
-        display: flex;
-        align-items: center;
-        justify-content: center;
+        height: 100%;
+        object-fit: cover;
+      }
     }
-    .usermanage{
-        padding-top: 20px;
+    .username {
+      width: 100%;
+      height: 50px;
+      margin-top: 20px;
+      font-size: 30px;
+      font-weight: 600;
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
-   }
-   .oncelogin{
+    .usermanage {
+      padding-top: 20px;
+    }
+  }
+  .oncelogin {
     width: 100%;
     height: 100px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    .bt{
-        width: 300px;
-        height: 40px;
+    .bt {
+      width: 300px;
+      height: 40px;
     }
-    .mess{
-        margin-top: 20px;
-        font-size: 12px;
-        font-weight: 300;
+    .mess {
+      margin-top: 20px;
+      font-size: 12px;
+      font-weight: 300;
     }
-   }
+  }
 }
 
 .account-manage {
