--- a/loop_web/Loop/src/components/FriendList/index.scss
+++ b/loop_web/Loop/src/components/FriendList/index.scss
@@ -1,4 +1,4 @@
-   .friend-list {
+.friend-list {
   width: 300px;
   height: 100vh;
   overflow: hidden;
@@ -231,7 +231,6 @@
           min-width: 50px; // 添加最小宽度防止挤压
           border-radius: 50%;
           overflow: hidden;
-          background-color: #e46342;
           img {
             width: 100%;
             height: 100%;
@@ -268,4 +267,10 @@
       }
     }
   }
+}
+.friend-list-letter {
+  padding: 8px 16px;
+  font-size: 14px;
+  color: #999;
+  background-color: #f5f5f5;
 }
