--- a/loop_web/Loop/src/pages/Change/index.scss
+++ b/loop_web/Loop/src/pages/Change/index.scss
@@ -1,4 +1,4 @@
-.main {
+.zhanghao {
   width: 50%;
   height: 70vh;
   border-radius: 20px;
@@ -95,7 +95,10 @@
       justify-content: center;
     }
     .usermanage {
+      display: flex;
+      width: 200px;
       padding-top: 20px;
+      justify-content: space-between;
     }
   }
   .oncelogin {
