--- a/loop_web/Loop/src/components/MessageList/index.scss
+++ b/loop_web/Loop/src/components/MessageList/index.scss
@@ -2,6 +2,9 @@
   width: 300px;
 
   .message-list-search {
+    // 添加 flex 布局，让子元素横向排列
+    display: flex; 
+    align-items: center; // 垂直居中对齐
     padding: 15px 16px 5px;
 
     .ant-input-affix-wrapper {
@@ -32,4 +35,35 @@
       }
     }
   }
+}
+
+.custom-avatar-uploader {
+  .avatar-mask {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    transition: opacity 0.3s;
+  }
+
+  &:hover .avatar-mask {
+    opacity: 1;
+  }
+}
+
+.group-member-item {
+  display: flex;
+  align-items: center; // 垂直居中对齐
+  margin-bottom: 8px; // 每个成员项之间添加一些间距
+}
+
+.group-member-item img {
+  margin-right: 8px; // 图片右侧添加一些间距
 }
