--- a/loop_web/Loop/src/components/MessageItem/index.scss
+++ b/loop_web/Loop/src/components/MessageItem/index.scss
@@ -41,13 +41,31 @@
       }
     }
 
-    .friend-desc {
-      font-size: 13px;
-      color: #9b9b9b;
-      white-space: nowrap;
-      overflow: hidden;
-      text-overflow: ellipsis;
-      max-width: 100%;
+    .friend-content {
+      position: relative;
+
+      &-text {
+        font-size: 13px;
+        color: #9b9b9b;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        max-width: 180px;
+      }
+      .friend-unread {
+        position: absolute;
+        right: 0;
+        top: 0;
+        width: 15px;
+        height: 15px;
+        border-radius: 50%;
+        background-color: rgb(218 71 34);
+        color: #fff;
+        display: flex;
+        justify-content: center;
+        // align-items: center;
+        font-size: 10px;
+      }
     }
   }
 }
