--- a/loop_web/Loop/src/components/FriendList/index.scss
+++ b/loop_web/Loop/src/components/FriendList/index.scss
@@ -274,3 +274,18 @@
   color: #999;
   background-color: #f5f5f5;
 }
+.category-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+  background-color: #f5f5f5;
+  cursor: pointer;
+}
+
+.category-header:hover {
+  background-color: #e8e8e8;
+}
+.ant-tabs-nav-wrap{
+  margin-left: 20px;
+}
