--- a/loop_web/Loop/src/components/Chat/index.scss
+++ b/loop_web/Loop/src/components/Chat/index.scss
@@ -238,40 +238,12 @@
   }
 }
 
-.chat-drawer {
-  width: 300px;
-  padding: 20px;
-
-  &-img {
-    width: 80px;
-    height: 80px;
-    border-radius: 50%;
-    margin: 0 auto 15px;
-    overflow: hidden;
-
-    img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-    }
+.chatInfo-drawer {
+  .ant-drawer-header {
+    background-color: #f5f5f5;
+    border-bottom: none;
   }
-
-  &-name {
-    text-align: center;
-    font-size: 18px;
-    font-weight: bold;
-    margin-bottom: 20px;
-  }
-
-  &-istop {
-    padding: 10px;
-    border-top: 1px solid #f0f0f0;
-    display: flex;
-    justify-content: space-between;
-
-    &-text {
-      font-weight: 600;
-      font-size: 15px;
-    }
+  .ant-drawer-body {
+    padding: 0px;
   }
 }
