--- a/loop_web/Loop/src/components/MessageItem/index.scss
+++ b/loop_web/Loop/src/components/MessageItem/index.scss
@@ -51,6 +51,7 @@
         overflow: hidden;
         text-overflow: ellipsis;
         max-width: 180px;
+        height: 20px;
       }
       .friend-unread {
         position: absolute;
