--- a/loop_web/Loop/src/components/ChatPrivateVideo/index.scss
+++ b/loop_web/Loop/src/components/ChatPrivateVideo/index.scss
@@ -7,7 +7,7 @@
   .video-wrapper {
     position: relative;
     width: 100%;
-    height: calc(100% - 80px);
+    height: calc(100vh - 180px);
 
     .remote-video {
       width: 100%;
@@ -17,7 +17,7 @@
 
     .local-video {
       position: absolute;
-      bottom: 20px;
+      bottom: 75px;
       right: 20px;
       width: 30%;
       max-width: 200px;
@@ -27,54 +27,39 @@
   }
 
   .control-buttons {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
     display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 15px;
-    height: 80px;
-    background: rgba(0, 0, 0, 0.7);
+    gap: 30px;
+    bottom: 20px;
 
     button {
-      padding: 8px 16px;
-      border-radius: 20px;
+      padding: 8px;
+      border-radius: 50%;
       border: none;
       cursor: pointer;
-      font-size: 14px;
       transition: all 0.3s;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 45px;
+      height: 45px;
 
       &.control-button {
-        background: rgba(255, 255, 255, 0.2);
-        color: white;
-
-        &:hover {
-          background: rgba(255, 255, 255, 0.3);
-        }
+        background-color: #ffffff;
 
         &.muted {
-          background: #f44336;
+          background: rgba(255, 255, 255, 0.6);
         }
 
         &.video-off {
-          background: #f44336;
-        }
-      }
-
-      &.call-button {
-        background: #4caf50;
-        color: white;
-
-        &:hover {
-          background: #45a049;
+          background: rgba(255, 255, 255, 0.6);
         }
       }
 
       &.end-call-button {
-        background: #f44336;
-        color: white;
-
-        &:hover {
-          background: #d32f2f;
-        }
+        background: #bd0000;
       }
     }
   }
