--- a/loop_web/Loop/src/components/ChatInfo/index.scss
+++ b/loop_web/Loop/src/components/ChatInfo/index.scss
@@ -182,6 +182,7 @@
       justify-content: space-between;
       .header-title {
         display: flex;
+        align-items: center;
       }
       .back-icon {
         cursor: pointer;
