--- a/loop_web/Loop/src/pages/Login/index.scss
+++ b/loop_web/Loop/src/pages/Login/index.scss
@@ -71,4 +71,21 @@ $color-border: #d9d9d9;
       cursor: pointer;
     }
   }
+  .footer {
+    position: fixed;
+    bottom: 20px;
+    width: 100%;
+    text-align: center;
+    color: #999;
+    font-size: 12px;
+
+    a {
+      color: #999;
+      text-decoration: none;
+
+      &:hover {
+        color: #666;
+      }
+    }
+  }
 }
