--- a/loop_web/src/components/ChatPrivateVideo/index.scss
+++ b/loop_web/src/components/ChatPrivateVideo/index.scss
@@ -26,6 +26,30 @@
     }
   }
 
+  .caller-avatar-container {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: #f0f0f0;
+
+    .caller-avatar {
+      width: 200px;
+      height: 200px;
+      border-radius: 50%;
+      object-fit: cover;
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+    }
+
+    .caller-name {
+      margin-top: 16px;
+      font-size: 18px;
+      color: #333;
+    }
+  }
+
   .control-buttons {
     position: absolute;
     left: 50%;
