--- a/loop_web/src/components/ChatPrivateVideo/index.scss
+++ b/loop_web/src/components/ChatPrivateVideo/index.scss
@@ -21,6 +21,7 @@
       right: 20px;
       width: 30%;
       max-width: 200px;
+      height: 120px;
       border: 2px solid #fff;
       border-radius: 8px;
     }
@@ -48,6 +49,32 @@
       font-size: 18px;
       color: #333;
     }
+  }
+
+  .me-avatar-container {
+    position: absolute;
+    bottom: 75px;
+    right: 20px;
+    width: 30%;
+    height: 120px;
+    max-width: 200px;
+    border: 2px solid #fff;
+    border-radius: 8px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    .me-avatar {
+      height: 60%;
+      border-radius: 50%;
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+    }
+  }
+  .show {
+    z-index: 1000;
+  }
+  .hidden {
+    z-index: -1000;
   }
 
   .control-buttons {
