--- a/loop_web/src/components/MessageList/index.scss
+++ b/loop_web/src/components/MessageList/index.scss
@@ -1,69 +1,28 @@
-.message-list {
+.message-container {
   width: 300px;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  background-color: #f5f5f5;
+  border-right: 1px solid #f0f0f0;
 
-  .message-list-search {
-    // 添加 flex 布局，让子元素横向排列
-    display: flex; 
-    align-items: center; // 垂直居中对齐
-    padding: 15px 16px 5px;
+  .message-header {
+    padding: 10px;
+    border-bottom: 1px solid #f0f0f0;
+  }
 
-    .ant-input-affix-wrapper {
-      border-radius: 18px;
-      border: 1px solid #e8e8e8;
-      transition: all 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
+  .message-content {
+    flex: 1;
+    overflow-y: auto;
+    padding: 8px 0;
 
-      &:hover {
-        border-color: #d9d9d9;
-      }
+    &::-webkit-scrollbar {
+      width: 6px;
+    }
 
-      &:focus-within {
-        border-color: #e46342;
-        box-shadow: 0 0 0 2px rgba(228, 99, 66, 0.1);
-      }
-
-      .search-icon {
-        color: #bfbfbf;
-        margin-right: 8px;
-        transition: color 0.3s;
-      }
-
-      .ant-input {
-        font-size: 14px;
-        &::placeholder {
-          color: #8c8c8c;
-        }
-      }
+    &::-webkit-scrollbar-thumb {
+      background-color: rgba(0, 0, 0, 0.2);
+      border-radius: 3px;
     }
   }
-}
-
-.custom-avatar-uploader {
-  .avatar-mask {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    opacity: 0;
-    transition: opacity 0.3s;
-  }
-
-  &:hover .avatar-mask {
-    opacity: 1;
-  }
-}
-
-.group-member-item {
-  display: flex;
-  align-items: center; // 垂直居中对齐
-  margin-bottom: 8px; // 每个成员项之间添加一些间距
-}
-
-.group-member-item img {
-  margin-right: 8px; // 图片右侧添加一些间距
 }
