--- a/loop_web/src/components/Chat/index.scss
+++ b/loop_web/src/components/Chat/index.scss
@@ -63,6 +63,24 @@
     gap: 12px;
     background-color: #f6f6f6;
 
+    .message-system {
+      display: flex;
+      justify-content: center;
+      width: 100%;
+
+      .message-tip {
+        width: 60%;
+        line-height: 15px;
+        font-size: 13px;
+        color: #888;
+        text-align: center; // 添加文字居中
+        word-break: break-word; // 允许单词内换行
+        white-space: pre-wrap; // 保留空白符但正常换行
+        padding: 4px 8px; // 添加内边距
+        border-radius: 4px; // 圆角
+      }
+    }
+
     // 自定义滚动条样式
     &::-webkit-scrollbar {
       width: 8px;
@@ -89,6 +107,15 @@
           .message-text {
             background-color: #1890ff;
             color: white;
+            display: flex;
+            align-items: center;
+          }
+
+          .iconfont {
+            cursor: pointer;
+            font-size: 25px;
+            padding-right: 8px;
+            transform: rotateY(180deg);
           }
         }
       }
@@ -98,6 +125,8 @@
 
         .message-content {
           .message-text {
+            display: flex;
+            align-items: center;
             background-color: #fff;
             color: #333; // 白色背景，黑色文字
             cursor: pointer;
@@ -111,6 +140,12 @@
                 var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
             }
           }
+        }
+        .iconfont {
+          cursor: pointer;
+          font-size: 25px;
+          padding-right: 8px;
+          // transform: rotateY(180deg);
         }
       }
 
@@ -187,82 +222,6 @@
     }
   }
 
-  .chat-input {
-    position: relative; // 改为相对定位
-    flex-shrink: 0; // 防止input被压缩
-    bottom: 0px;
-    width: 100%;
-    width: 100%;
-    height: 120px;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    background-color: #fff;
-
-    .textarea {
-      width: 100%;
-      display: block;
-      margin: 0px;
-      box-sizing: border-box;
-      background-color: transparent;
-      font-family: inherit;
-      font-size: inherit;
-      letter-spacing: inherit;
-      height: 73px;
-      overflow: auto;
-      resize: none;
-      padding: 10px;
-      min-height: 63px;
-      outline: 0px;
-      border: 0px;
-
-      // 禁用聚焦动画
-      &:focus {
-        outline: none;
-        box-shadow: none;
-        animation: none;
-        transition: none;
-      }
-
-      // 隐藏滚动条按钮并禁用动画
-      &::-webkit-scrollbar-button {
-        display: none;
-        height: 0;
-        width: 0;
-      }
-
-      // 自定义滚动条样式
-      &::-webkit-scrollbar {
-        width: 6px;
-        height: 6px;
-      }
-
-      &::-webkit-scrollbar-thumb {
-        background-color: rgba(0, 0, 0, 0.2);
-        border-radius: 3px;
-      }
-
-      &::-webkit-scrollbar-track {
-        background-color: transparent;
-      }
-    }
-    .blinking-cursor {
-      animation: blink 1s step-end infinite;
-      margin-left: 2px;
-      vertical-align: bottom;
-    }
-
-    @keyframes blink {
-      0%,
-      100% {
-        opacity: 1;
-      }
-      50% {
-        opacity: 0;
-      }
-    }
-  }
-
   .context-menu {
     position: fixed;
     z-index: 1000;
@@ -312,6 +271,26 @@
       max-height: 300px;
       min-height: 30px;
       overflow-y: auto;
+    }
+  }
+
+  .emotion-box {
+    position: fixed;
+    width: 372px;
+    box-sizing: border-box;
+    padding: 5px;
+    background-color: #fff;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.12), 0 0 6px rgba(0, 0, 0, 0.04);
+
+    .emotion-items {
+      display: flex;
+      flex-wrap: wrap;
+
+      .emotion-item {
+        text-align: center;
+        cursor: pointer;
+        padding: 2px;
+      }
     }
   }
 }
