--- a/loop_web/src/components/SideNavigation/index.scss
+++ b/loop_web/src/components/SideNavigation/index.scss
@@ -47,6 +47,10 @@
           color: #fff49a;
         }
       }
+      .active {
+        font-weight: 600;
+        color: #fff49a;
+      }
     }
   }
   .bottom {
